--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "license": "MIT",
   "scripts": {
     "test": "jest"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.18",
+    "jest": "^24.9.0"
   }
 }
