--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest ./src/snapshot.test.js"
+    "test": "jest ./src/tdd.test.js --watch"
   },
   "devDependencies": {
     "@types/jest": "^24.0.18",
