--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "jest ./src/tdd.test.js --watch"
+    "test": "jest ./src/__tests__/ --watch"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
     "@types/jest": "^24.0.18",
+    "babel-jest": "^24.9.0",
     "jest": "^24.9.0"
   },
   "dependencies": {
